Back to basics. Proper working noise generation

--- a/index.html
+++ b/index.html
@@ -3,8 +3,9 @@
 	<head>
 	   <meta charset="utf-8">
 	   <title>Tangaroa</title>
-		 <script src="perlin.js" type="text/javascript" defer></script>
-	   <script src="tangaroa.js" type="text/javascript" defer></script>
+		 <script src="Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
+		 <script src="noise_generator.js" type="text/javascript" defer></script>
+		 <script src="tangaroa.js" type="text/javascript" defer></script>
 		 <link rel="stylesheet" href="style.css">
 	</head>
 	<body onload="setUp()">
