--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	   <title>Tangaroa</title>
 		 <script src="Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
 		 <script src="noise_generator.js" type="text/javascript" defer></script>
+		 <script src="noise_map_converter.js" type="text/javascript" defer></script>
 		 <script src="tangaroa.js" type="text/javascript" defer></script>
 		 <link rel="stylesheet" href="style.css">
 	</head>
