--- a/index.html
+++ b/index.html
@@ -4,8 +4,7 @@
 	   <meta charset="utf-8">
 	   <title>Tangaroa</title>
 		 <script src="Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
-		 <script src="noise_generator.js" type="text/javascript" defer></script>
-		 <script src="noise_map_converter.js" type="text/javascript" defer></script>
+		 <script src="island.js" type="text/javascript" defer></script>
 		 <script src="tangaroa.js" type="text/javascript" defer></script>
 		 <link rel="stylesheet" href="style.css">
 	</head>
