--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 	<head>
 	   <meta charset="utf-8">
 	   <title>Tangaroa</title>
+		 <script src="name_list.js" type="text/javascript" defer></script>
 		 <script src="Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
 		 <script src="island.js" type="text/javascript" defer></script>
 		 <script src="tangaroa.js" type="text/javascript" defer></script>
