Added particles behind boat

--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 		 <script src="name_list.js" type="text/javascript" defer></script>
 		 <script src="Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
 		 <script src="island.js" type="text/javascript" defer></script>
+		 <script src="particle.js" type="text/javascript" defer></script>
 		 <script src="tangaroa.js" type="text/javascript" defer></script>
 		 <link rel="stylesheet" href="style.css">
 	</head>
