--- a/index.html
+++ b/index.html
@@ -1,14 +1,15 @@
 <!DOCTYPE html>
 <html>
 	<head>
-	   <meta charset="utf-8">
-	   <title>Tangaroa</title>
-		 <script src="name_list.js" type="text/javascript" defer></script>
-		 <script src="Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
-		 <script src="island.js" type="text/javascript" defer></script>
-		 <script src="particle.js" type="text/javascript" defer></script>
-		 <script src="tangaroa.js" type="text/javascript" defer></script>
-		 <link rel="stylesheet" href="style.css">
+		<meta charset="utf-8">
+		<title>Tangaroa</title>
+		<script src="name_list.js" type="text/javascript" defer></script>
+		<script src="Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
+		<script src="island.js" type="text/javascript" defer></script>
+		<script src="world.js" type="text/javascript" defer></script>
+		<script src="particle.js" type="text/javascript" defer></script>
+		<script src="tangaroa.js" type="text/javascript" defer></script>
+		<link rel="stylesheet" href="style.css">
 	</head>
 	<body onload="setUp()">
 		<canvas id="map"></canvas>
