My boids are kinda dumb

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 		<script src="island.js" type="text/javascript" defer></script>
 		<script src="world.js" type="text/javascript" defer></script>
 		<script src="particle.js" type="text/javascript" defer></script>
+		<script src="boid.js" type="text/javascript" defer></script>
 		<script src="tangaroa.js" type="text/javascript" defer></script>
 		<link rel="stylesheet" href="style.css">
 	</head>
