Added scrolling about section to menu

--- a/index.html
+++ b/index.html
@@ -19,5 +19,9 @@
 		<button class="menu" id="QuickPlay" onclick="QuickPlay()">Quick Play</button>
 		<button class="menu" id="NewGame" onclick="NewGame()">New Game</button>
 		<button class="menu" id="About" onclick="About()">About</button>
+		<button class="menu" id="Back" onclick="Back()">Back</button>
+		<button class="menu" id="GitHub"><a href="https://github.com/brennanwilkes/Tangaroa" target="_blank">GitHub</a></button>
+		<button class="menu" id="LinkedIn"><a href="https://www.linkedin.com/in/brennan-wilkes-19553b14b/" target="_blank">LinkedIn</a></button>
+		<button class="menu" id="Website"><a href="https://bw.codexwilkes.com/" target="_blank">Website</a></button>
 	</body>
 </html>
