Updated colour scheme

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 		<meta charset="utf-8">
 		<title>Tangaroa</title>
 		<script src="name_list.js" type="text/javascript" defer></script>
+		<script src="colour_scheme.js" type="text/javascript" defer></script>
 		<script src="Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
 		<script src="island.js" type="text/javascript" defer></script>
 		<script src="world.js" type="text/javascript" defer></script>
