--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 		<script src="world.js" type="text/javascript" defer></script>
 		<script src="particle.js" type="text/javascript" defer></script>
 		<script src="boid.js" type="text/javascript" defer></script>
+		<script src="albatross.js" type="text/javascript" defer></script>
 		<script src="tangaroa.js" type="text/javascript" defer></script>
 		<script src="menu.js" type="text/javascript" defer></script>
 		<link rel="stylesheet" href="style.css">
