Refactored code and fixed jittery boid bug

--- a/index.html
+++ b/index.html
@@ -3,16 +3,16 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Tangaroa</title>
-		<script src="name_list.js" type="text/javascript" defer></script>
-		<script src="colour_scheme.js" type="text/javascript" defer></script>
-		<script src="Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
-		<script src="island.js" type="text/javascript" defer></script>
-		<script src="world.js" type="text/javascript" defer></script>
-		<script src="particle.js" type="text/javascript" defer></script>
-		<script src="boid.js" type="text/javascript" defer></script>
-		<script src="albatross.js" type="text/javascript" defer></script>
-		<script src="tangaroa.js" type="text/javascript" defer></script>
-		<script src="menu.js" type="text/javascript" defer></script>
+		<script src="_jss/name_list.js" type="text/javascript" defer></script>
+		<script src="_jss/colour_scheme.js" type="text/javascript" defer></script>
+		<script src="_jss/Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
+		<script src="_jss/island.js" type="text/javascript" defer></script>
+		<script src="_jss/world.js" type="text/javascript" defer></script>
+		<script src="_jss/particle.js" type="text/javascript" defer></script>
+		<script src="_jss/boid.js" type="text/javascript" defer></script>
+		<script src="_jss/albatross.js" type="text/javascript" defer></script>
+		<script src="_jss/tangaroa.js" type="text/javascript" defer></script>
+		<script src="_jss/menu.js" type="text/javascript" defer></script>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body onload="setUp()">
