Added Manta rays :D

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		<script src="_jss/particle.js" type="text/javascript" defer></script>
 		<script src="_jss/boid.js" type="text/javascript" defer></script>
 		<script src="_jss/albatross.js" type="text/javascript" defer></script>
+		<script src="_jss/manta.js" type="text/javascript" defer></script>
 		<script src="_jss/tangaroa.js" type="text/javascript" defer></script>
 		<script src="_jss/menu.js" type="text/javascript" defer></script>
 		<link rel="stylesheet" href="style.css">
