fixed github pages bug

--- a/index.html
+++ b/index.html
@@ -3,17 +3,17 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Tangaroa</title>
-		<script src="_jss/name_list.js" type="text/javascript" defer></script>
-		<script src="_jss/colour_scheme.js" type="text/javascript" defer></script>
-		<script src="_jss/Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
-		<script src="_jss/island.js" type="text/javascript" defer></script>
-		<script src="_jss/world.js" type="text/javascript" defer></script>
-		<script src="_jss/particle.js" type="text/javascript" defer></script>
-		<script src="_jss/boid.js" type="text/javascript" defer></script>
-		<script src="_jss/albatross.js" type="text/javascript" defer></script>
-		<script src="_jss/manta.js" type="text/javascript" defer></script>
-		<script src="_jss/tangaroa.js" type="text/javascript" defer></script>
-		<script src="_jss/menu.js" type="text/javascript" defer></script>
+		<script src="jss/name_list.js" type="text/javascript" defer></script>
+		<script src="jss/colour_scheme.js" type="text/javascript" defer></script>
+		<script src="jss/Stefan-Gustavson-Perlin.js" type="text/javascript" defer></script>
+		<script src="jss/island.js" type="text/javascript" defer></script>
+		<script src="jss/world.js" type="text/javascript" defer></script>
+		<script src="jss/particle.js" type="text/javascript" defer></script>
+		<script src="jss/boid.js" type="text/javascript" defer></script>
+		<script src="jss/albatross.js" type="text/javascript" defer></script>
+		<script src="jss/manta.js" type="text/javascript" defer></script>
+		<script src="jss/tangaroa.js" type="text/javascript" defer></script>
+		<script src="jss/menu.js" type="text/javascript" defer></script>
 		<link rel="stylesheet" href="style.css">
 	</head>
 	<body onload="setUp()">
