Added basic villager ai and sprite. Added coconutless trees

--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 		<script src="jss/island.js" type="text/javascript" defer></script>
 		<script src="jss/world.js" type="text/javascript" defer></script>
 		<script src="jss/particle.js" type="text/javascript" defer></script>
+		<script src="jss/villager.js" type="text/javascript" defer></script>
 		<script src="jss/boid.js" type="text/javascript" defer></script>
 		<script src="jss/albatross.js" type="text/javascript" defer></script>
 		<script src="jss/manta.js" type="text/javascript" defer></script>
