Began refactoring player code

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 		<script src="jss/boid.js" type="text/javascript" defer></script>
 		<script src="jss/albatross.js" type="text/javascript" defer></script>
 		<script src="jss/manta.js" type="text/javascript" defer></script>
+		<script src="jss/player.js" type="text/javascript" defer></script>
 		<script src="jss/tangaroa.js" type="text/javascript" defer></script>
 		<script src="jss/menu.js" type="text/javascript" defer></script>
 		<link rel="stylesheet" href="style.css">
